feat: update Vite configuration and add unplugin dependencies for improved component handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -190,9 +190,10 @@
   "tailwindCSS.experimental.configFile": "internal/tailwind-config/src/index.ts",
 
   "github.copilot.enable": {
-    "*": true,
-    "markdown": true,
+    "*": false,
     "plaintext": false,
+    "markdown": false,
+    "scminput": false,
     "yaml": false
   },
 
